src/objects/StudentEulaAgreement__c.object
<CustomObject>
    <description>When a student agrees to a eula version, a record is created in this object.</description>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student associated with the eula agreement</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Eula Agreements</relationshipLabel>
        <relationshipName>StudentEulaAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGUEula__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The eula that the student agreed to.</description>
        <label>WGU Eula</label>
        <referenceTo>WGUEula__c</referenceTo>
        <relationshipLabel>Student Eula Agreements</relationshipLabel>
        <relationshipName>StudentEulaAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student Eula Agreement</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Eula Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>